clusters/contabo-mkt/tenants/test-2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tenant-ingress
  namespace: tenant-test-2
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: test-2.omani.rest
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookstack-x-tenant-test-2-x-vcluster
                port:
                  number: 80
          - path: /bookstack
            pathType: Prefix
            backend:
              service:
                name: bookstack-x-tenant-test-2-x-vcluster
                port:
                  number: 80
  tls:
    - hosts:
        - test-2.omani.rest
      secretName: tenant-test-2-tls
